# SLH-king

./: .env  Cargo.toml  db.json  db.txt  log4rs.yaml  readme.md
src/: auth.rs  database.rs  main.rs  models.rs
