[package]
name = "cags"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.duc@heig-vd.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
once_cell = "1.16"
serde_json = "1.0"
serde = { version = "1.0.152", features = ["derive"] }
log = "0.4"
argon2 = "0.4.1"
dotenv = "0.15"
rand_core = { version = "0.6", features = ["std"] }
dryoc = "0.4.3"
log4rs = "1.2.0"